version 1.3-1
- exported damerauLevenshteinDistance
- bugfix deterministic imputation: wrong logging when multiple rules were applied to a record (thanks to Jeroen Pannekoek).

version 1.3-0
- Added deterministic imputation (correction) feature, see ?imputationRules

version 1.2-1
- Added 'round' option for deduImpute.editmatrix (defaults to true)
- bugfix in correctSigns: some correction opportunities were missed because of ignored constant vector in constraints.

version 1.2-0
- Discussion papers used to be included as vignette. Now only as pdf in inst/doc
- deducorrect object gains 'call' attribute.
- deduImpute now sets data to NA according to adapt (should be more intuitive)
- deduImpute accepts 'editset'. Imputations causing new violations are reverted afterwards
- correctRounding, correctTypos, correctSigns now S3 generic and accept 'editset'. Corrections causing new violations are reverted afterwards.
- deduImpute now accepts data.frames with more variables than specified in editset (-matrix, -array)
- bugfix: counting nr. of imputations in deduImpute.editmatrix in presence of 'adapt' argument
- BREAKING CHANGE: Removed deprecated argument 'Q' from 'correctRounding'
- BREAKING CHANGE: Argument 'R' of correctRounding is renamed 'E' for consistency reasons 

version 1.1-3
- Solved problem in vignette, caused by updates in editrules.

version 1.1-2
- Discussion paper included in 'doc' directory of package
- Solved bug in deducorrect object: rownames of $corrections were sometimes duplicated

version 1.1-1
- Updates on vignette, index.html of online manual and documentation.
- Solved possible clash with plyr: both editrules and plyr publish a reduce function.

version 1.1-0
- Deductive imputation methods for categorical data: deduImpute, deductiveLevels
- Deductive imputation methods for numerical records: deduImpute, solSpace/imputess, deductiveZeros
- Solved corner case: constructing deducorrect object when nothing was corrected failed.

version 1.0-2