@@ -1,4 +1,5 @@
 version 1.3-1
+- bugfix in correctSigns: not all swap-options were found when edits involving <= (or >=) are involved (thanks to Sander Scholtus).
 - exported damerauLevenshteinDistance
 - bugfix deterministic imputation: wrong logging when multiple rules were applied to a record (thanks to Jeroen Pannekoek).
 
